# codemem-cli

./: .gitignore  pyproject.toml  setup.py
codemem/: cli.py  config.py  git_hook.py
codememory/: ask.py  cli.py  config.py  embed.py  git_utils.py  groq_client.py  ingest.py  store.py
codememory/hooks/: post-commit
